// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Carousel Bottom page indicator 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; background: #CCD1D1;"
>
  
    
  <h4>
    Navigation buttons in page indicator
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    />
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          aria-label="Displaying item 5 of 7"
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-1"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    Content navigation buttons
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-2"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    Numeric page indicator
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    />
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <div
        class="fd-carousel__page-indicators"
      >
        
                
        <div
          class="fd-carousel__text"
        >
          1 of 4
        </div>
        
            
      </div>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-3"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    No page indicator
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-4"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Carousel Hidden navigation buttons 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; background: #CCD1D1;"
>
  
    
  <h4>
    Hiding navigation buttons in page indicator
  </h4>
  
    
  <div
    class="fd-carousel fd-carousel--no-navigation"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    />
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          aria-label="Displaying item 5 of 7"
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-9"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    Hiding navigation buttons in the content
  </h4>
  
    
  <div
    class="fd-carousel fd-carousel--no-navigation"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
        
    </div>
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    >
      
           
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
           
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-10"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Carousel Items in horizontal direction 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; background: #CCD1D1;"
>
  
    
  <h4>
    Items in horizontal direction
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 60rem;"
  >
    
        
    <div
      class="fd-carousel__content fd-carousel--horizontal"
      style="text-align: center; padding: 1rem; min-height: 15.5rem;"
    >
      
            
      <div
        class="fd-carousel__item fd-carousel__item--active"
      >
        
                
        <div
          aria-label="Carousel Image 4"
          role="img"
          style="
                        width:100%;
                        background-image: url(assets/images/backgrounds/Godafoss_waterfall_in_northern_Iceland.jpg);
                        height: 15.5rem;
                        background-size:cover;"
        >
          
                
        </div>
        
            
      </div>
      

            
      <div
        class="fd-carousel__item fd-carousel__item--active"
      >
        
                
        <div
          aria-label="Carousel Image 4"
          role="img"
          style="
                        width:100%;
                        background-image: url(assets/images/backgrounds/Godafoss_waterfall_in_northern_Iceland.jpg);
                        height: 15.5rem;
                        background-size:cover;"
        >
          
                
        </div>
        
            
      </div>
      

            
      <div
        class="fd-carousel__item fd-carousel__item--active"
      >
        
                
        <div
          aria-label="Carousel Image 4"
          role="img"
          style="
                        width:100%;
                        background-image: url(assets/images/backgrounds/Godafoss_waterfall_in_northern_Iceland.jpg);
                        height: 15.5rem;
                        background-size:cover;"
        >
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          aria-label="Displaying item 5 of 7"
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-11"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

</div>
`;

exports[`Storyshots Components/Carousel Top page indicator 1`] = `
<div
  style="display: flex; flex-direction: column; align-items: center; background: #CCD1D1;"
>
  
    
  <h4>
    Navigation buttons in page indicator
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    />
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-5"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    Navigation buttons in content
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <ol
        class="fd-carousel__page-indicators"
      >
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="1"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="2"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="3"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="4"
        />
        
                
        <li
          class="fd-carousel__page-indicator fd-carousel__page-indicator--active"
          data-slide-to="5"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="6"
        />
        
                
        <li
          class="fd-carousel__page-indicator"
          data-slide-to="7"
        />
        
            
      </ol>
      
        
    </div>
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    >
      
           
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
           
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-6"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    Numeral format for page indicator
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <div
        class="fd-carousel__page-indicators"
      >
        
                
        <div
          class="fd-carousel__text"
        >
          1 of 4
        </div>
        
            
      </div>
      
        
    </div>
    
        
    <div
      class="fd-carousel__content"
      style="min-height: 15.5rem;"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
    
  </div>
  
    
  <div
    aria-live="polite"
    id="carousel-7"
    role="region"
    style="display: none;"
  >
    
        Displaying item 1 of 4
    
  </div>
  

    
  <h4>
    No page indicators
  </h4>
  
    
  <div
    class="fd-carousel"
    data-ride="carousel"
    style="margin-bottom: 3rem; max-width: 30rem;"
  >
    
        
    <div
      class="fd-carousel__page-indicator-container"
    >
      
            
      <button
        aria-label="Go to previous item"
        class="fd-button fd-carousel__button fd-carousel__button--left"
        data-slide="prev"
      >
        
                
        <i
          class="sap-icon--slim-arrow-left"
        />
        
            
      </button>
      
            
      <ol
        class="fd-carousel__page-indicators"
      />
      
            
      <button
        aria-label="Go to next item"
        class="fd-button fd-carousel__button fd-carousel__button--right"
        data-slide="next"
      >
        
                
        <i
          class="sap-icon--slim-arrow-right"
        />
        
            
      </button>
      
        
    </div>
    
        
    <div
      class="fd-carousel__content"
      style="text-align: center; padding: 1rem; min-height: 15.5rem;"
    >
      
            
      <div
        class="fd-carousel__item fd-carousel__item--active"
      >
        
                
        <div
          aria-label="Carousel Image 4"
          role="img"
          style="
                        width:100%;
                        background-image: url(assets/images/backgrounds/Godafoss_waterfall_in_northern_Iceland.jpg);
                        height: 15.5rem;
                        background-size:cover;"
        >
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-live="polite"
      id="carousel-8"
      role="region"
      style="display: none;"
    >
      
        Displaying item 1 of 4
    
    </div>
    

  </div>
  

</div>
`;
